# CopilotTraining

.github/workflows/: ci.yml  deploy.yml  npm-grunt.yml
fleet-dashboard/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.html  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  dashboard.html  index.html  package.json  setup.ps1  tailwind.config.js  vite.config.ts
fleet-dashboard/src/: App.tsx  index.css  vite-env.d.ts
fleet-dashboard/src/api/: restClient.ts  websocketClient.ts
fleet-dashboard/src/components/: ConnectionStatus.tsx  ErrorBoundary.tsx  FilterControls.tsx  MapView.tsx  VehicleList.tsx
fleet-dashboard/src/stores/: fleetStore.ts
fleet-dashboard/src/types/: index.ts
fleet-dashboard/src/utils/: batcher.ts
infra/: README.md  main.bicep  main.bicepparam
telematics-firmware/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md
telematics-firmware/docs/: architecture.md  detailed_design.md  integration_guide.md
telematics-firmware/include/: config.h  telemetry_types.h
telematics-firmware/src/: main.c
telematics-firmware/src/drivers/: adc_driver.c  adc_driver.h  can_driver.c  can_driver.h  gps_driver.c  gps_driver.h
telematics-firmware/src/middleware/: circular_buffer.c  circular_buffer.h  power_manager.c  power_manager.h
